# thesis-graph

./: Makefile  README.md  analyze_profiles.ipynb  eda.ipynb  pyproject.toml  scholar_eda.ipynb
committee_predictor/: config.py  data.py  embedding.py  features.py  graph.py  metrics.py  model.py  train.py  utils.py
data_builder/: analyze_profiles.ipynb  build_researchers_df.py  crawl_scholar.py  download_scholar_profiles.py  fetch_profile_details.py  fetch_scholar_profiles.py  verify_fetched_profiles.ipynb
mentor_finder/: data.py  model.py  split_data.py  train.py
thesis_graph/: config.py  data.py  features.py  graph.py  metrics.py  model.py  train.py
