[project]
name = "mentor-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "pandas>=2.3.3",
    "sentence-transformers>=5.1.2",
    "serpapi>=0.1.5",
    "torch==2.8",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.1",
]
